# pykage

./: .gitignore  README.md  main.py  pandas-1.3.3.txt  pkg.py  pykg.py  pyproject.toml  requirements.txt  setup.py  test.py
cmd/: add_cmd.py  cmd.py  init_cmd.py  install_args_cmd.py  install_cmd.py  run_args_cmd.py  run_cmd.py
env/: pyvenv.cfg
packagespy/: hello_hello-1.0.0-py3-none-any.whl
pykage/command/: __init__.py  add_command.py  init_command.py  install_command.py  run_command.py
pykage/console/: color_terminal.py
pykage/errors/: errors_api.py
pykage/files/: file.py  toml_parse.py
pykage/regex/: data_re.py
pykage/system/: unzip_file.py
pykg/: pykg.py
pykg/command/: add_command.py  init_command.py  install_command.py
pykg/errors/: errors_pack.py
pykg/files/: file.py  init_pkg.py  pkg_ast.py
pykg/install_pack/: api.py  depensie.py  install.py
pykg/system/: unzip_file.py
pypackages/numpy-1.21.2.dist-info/: RECORD
sh_script/: create_wheel.sh
site/: config.py  run.py
site/ppapp/: views.py
site/ppapp/templates/: home.html
tests/: test_pykg.py
trying/: pkg.py
utils/: api.py  data.py  errors.py  input_conf.py  regex.py  serializer.py  system.py  tree_ast.py  type_help.py
