[tool.poetry]
name = "pykg"
version = "0.1.0"
description = ""
authors = ["antoineB24 <85784092+antoineB24@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
PyInquirer = "^1.0.3"
codegen = "^1.0"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
